splitting the dataset

--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "9                          @twittera que me muera ?   "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,15 +174,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Sentence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>is upset that he can't update his Facebook by ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>my whole body feels itchy and like its on fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sentiment                                           Sentence\n",
+       "0          0  @switchfoot http://twitpic.com/2y1zl - Awww, t...\n",
+       "1          0  is upset that he can't update his Facebook by ...\n",
+       "2          0  @Kenichan I dived many times for the ball. Man...\n",
+       "3          0    my whole body feels itchy and like its on fire \n",
+       "4          0  @nationwideclass no, it's not behaving at all...."
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.drop([1, 2, 3, 4], axis=1)\n",
+    "df.columns = ['Sentiment', 'Sentence']\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1600000, 2)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentence: It has to be said that @dobbie31 manages to make the crappiest of evenings feel OK \n",
-      "Sentiment: Positive\n"
+      "0    800000\n",
+      "4    800000\n",
+      "Name: Sentiment, dtype: int64\n",
+      "\n",
+      "Negative: 800000\n",
+      "Positive: 800000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Class Distribution:\n",
+    "counts = df['Sentiment'].value_counts()\n",
+    "print(counts)\n",
+    "print(f'\\nNegative: {counts.iloc[0]}\\nPositive: {counts.iloc[1]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: @Yungmarvingaye , Just left from Harlem earlier today. \n",
+      "Sentiment: Negative\n"
      ]
     }
    ],
@@ -196,7 +321,7 @@
     "\n",
     "sentiments = {0: 'Negative', 1: 'Neutral', 4: 'Positive'}\n",
     "random_sentence_idx = random.randint(0, df.shape[0])\n",
-    "random_sentence = df.iloc[random_sentence_idx, 5]\n",
+    "random_sentence = df.iloc[random_sentence_idx, 1]\n",
     "sentence_sentiment = sentiments[df.iloc[random_sentence_idx, 0]]\n",
     "\n",
     "print(f'Sentence: {random_sentence}')\n",
@@ -205,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +360,7 @@
      "output_type": "stream",
      "text": [
       "thought this indeed remarkable contribution\n",
-      "said dobbie31 manages make crappiest evenings feel ok \n"
+      "yungmarvingaye  left harlem earlier today \n"
      ]
     }
    ],
@@ -259,39 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0          switchfoot httptwitpiccom2y1zl  awww thats bum...\n",
-       "1          upset cant update facebook texting it might cr...\n",
-       "2          kenichan dived many times ball managed save 50...\n",
-       "3                          whole body feels itchy like fire \n",
-       "4          nationwideclass no behaving all im mad here ca...\n",
-       "                                 ...                        \n",
-       "1599995                    woke up school best feeling ever \n",
-       "1599996    thewdbcom  cool hear old walt interviews  â« ...\n",
-       "1599997                     ready mojo makeover ask details \n",
-       "1599998    happy 38th birthday boo alll time tupac amaru ...\n",
-       "1599999    happy charitytuesday thenspcc sparkscharity sp...\n",
-       "Name: 5, Length: 1600000, dtype: object"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let us apply our preprocessing function to all of the sentences in our dataset\n",
-    "df[5] = df[5].apply(pre_process_text)"
+    "df['Sentence'] = df['Sentence'].apply(pre_process_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -302,16 +405,58 @@
        "2    kenichan dived many times ball managed save 50...\n",
        "3                    whole body feels itchy like fire \n",
        "4    nationwideclass no behaving all im mad here ca...\n",
-       "Name: 5, dtype: object"
+       "Name: Sentence, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[5].head(5)"
+    "df['Sentence'].head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Seperate sentiments from sentences\n",
+    "X = df['Sentence']\n",
+    "y = df['Sentiment'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting the dataset into training and testing 70% and 20% respectively.\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "rand_seed = 42 # To ensure the reproducibility\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, stratify=y, random_state=rand_seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Samples: 1120000\n",
+      "Test Samples: 480000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Training Samples: {len(X_train)}')\n",
+    "print(f'Test Samples: {len(X_test)}')"
    ]
   },
   {
