--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -563,6 +563,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Experiment no. 2 adding an additional layer of 128 neurons\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(max_features, max_length))\n",
+    "model.add(SimpleRNN(32))\n",
+    "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dense(32, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(optimizer='rmsprop', loss='binary_crossentropy', metrics=['acc'])\n",
+    "history = model.fit(X_train, y_train,\n",
+    "                    epochs=10,\n",
+    "                    batch_size=256,\n",
+    "                    validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
