RNN, LSTM, GloVe, GloVe-Twitter, FastText

--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -3108,18 +3108,9 @@
         "  i += 1\n",
         "\n",
         "print(f'Len: {len(results_modified)}')\n",
-        "results_modified"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {
-        "id": "Zch3pbzHUSdn"
-      },
-      "outputs": [],
-      "source": [
-        "results = results_modified"
+        "\n",
+        "results = results_modified\n",
+        "results"
       ]
     },
     {
@@ -3197,6 +3188,24 @@
         "  \n",
         "#display table\n",
         "print(tabulate(results, headers=col_names, tablefmt=\"fancy_grid\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "'''\n",
+        "    In terms of accuracy, LSTM seems to have outperformed RNN, \n",
+        "    in all variations of embeddings and different configuration.\n",
+        "\n",
+        "    This makes sense since LSTM maintains a distant past much better\n",
+        "    compared to RNN, as result performing much better.\n",
+        "\n",
+        "    LSTM with GloVe, GloVe-Twitter, and FastText all seem to have\n",
+        "    performed similar with around 79% accuracy.\n",
+        "'''"
       ]
     }
   ],
