RNN, LSTM, GloVe, GloVe-Twitter, FastText

--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -500,6 +500,7 @@
       ],
       "source": [
         "# Class Distribution:\n",
+        "\n",
         "counts = df['Sentiment'].value_counts()\n",
         "print(counts)\n",
         "print(f'\\nNegative: {counts.iloc[0]}\\nPositive: {counts.iloc[1]}')"
@@ -562,10 +563,10 @@
         "\n",
         "'''\n",
         "    Printing a random sentence from the dataset along with its sentiment. \n",
-        "    # (Run the cell again, to generate new sentence each time)\n",
+        "    (Run the cell again, to generate new sentence each time)\n",
         "'''\n",
         "\n",
-        "sentiments = {0: 'Negative', 1: 'Neutral', 4: 'Positive'}\n",
+        "sentiments = {0: 'Negative', 1: 'Positive'}\n",
         "random_sentence_idx = random.randint(0, df.shape[0])\n",
         "random_sentence = df.iloc[random_sentence_idx, 1]\n",
         "sentence_sentiment = sentiments[df.iloc[random_sentence_idx, 0]]\n",
@@ -3023,98 +3024,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PkrIIdSdlGAy",
-        "outputId": "a9dede22-ae79-4fe9-bd19-2ed5fcc47ff5"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Len: 16\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[[0.7109354138374329,\n",
-              "  0.674040917638727,\n",
-              "  0.8169291666666667,\n",
-              "  0.7386381402848494],\n",
-              " [0.5975375175476074,\n",
-              "  0.5649780713928829,\n",
-              "  0.8480791666666667,\n",
-              "  0.6781694599007096],\n",
-              " [0.73515, 0.8088119418665732, 0.6158833333333333, 0.6992846870032549],\n",
-              " [0.7564770833333333,\n",
-              "  0.7660654157535519,\n",
-              "  0.7384583333333333,\n",
-              "  0.7520085880797962],\n",
-              " [0.7721270833333334,\n",
-              "  0.7787604198233805,\n",
-              "  0.7602291666666666,\n",
-              "  0.7693832241523627],\n",
-              " [0.7707729166666667, 0.7829306839307405, 0.7492875, 0.7657397373144242],\n",
-              " [0.7716, 0.7800096223237912, 0.7565833333333334, 0.7681179038562412],\n",
-              " [0.766675, 0.8003012302581571, 0.7106875, 0.7528369592563657],\n",
-              " [0.7911145833333333,\n",
-              "  0.7939202975066152,\n",
-              "  0.7863416666666667,\n",
-              "  0.7901128092625427],\n",
-              " [0.7885208333333333,\n",
-              "  0.7594922952392373,\n",
-              "  0.8444541666666666,\n",
-              "  0.7997229938758761],\n",
-              " [0.7923291666666666,\n",
-              "  0.7750427310219379,\n",
-              "  0.8237541666666667,\n",
-              "  0.7986563896227711],\n",
-              " [0.791825, 0.7980365790347151, 0.7814041666666667, 0.7896327984538882],\n",
-              " [0.7811708333333334,\n",
-              "  0.7727629164342477,\n",
-              "  0.7965833333333333,\n",
-              "  0.7844923450650187],\n",
-              " [0.7806479166666667, 0.7678502547053888, 0.8045375, 0.7857658805169015],\n",
-              " [0.7881041666666667, 0.7712547271956941, 0.8191625, 0.7944870561801384],\n",
-              " [0.7890104166666667, 0.7833354438394327, 0.799025, 0.7911024387024114]]"
-            ]
-          },
-          "execution_count": 46,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "results_modified = []\n",
-        "\n",
-        "for i, result in enumerate(results):\n",
-        "  if i == 6: break\n",
-        "  results_modified.append(result)\n",
-        "\n",
-        "results_modified.append(results[-4])\n",
-        "results_modified.append(results[-3])\n",
-        "results_modified.append(results[-2])\n",
-        "results_modified.append(results[-1])\n",
-        "\n",
-        "i = 6\n",
-        "\n",
-        "while i <= 11:\n",
-        "  results_modified.append(results[i])\n",
-        "  i += 1\n",
-        "\n",
-        "print(f'Len: {len(results_modified)}')\n",
-        "\n",
-        "results = results_modified\n",
-        "results"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 48,
       "metadata": {
         "colab": {
@@ -3182,11 +3091,9 @@
         "  for j, val in enumerate(result):\n",
         "    result[j] = round(val, 2)\n",
         "  result.insert(0, models[i])\n",
-        "  \n",
-        "#define header names\n",
+        "\n",
         "col_names = [\"Model Detail\", \"Acc\", \"Precision\", \"Recall\", \"F1-Score\"]\n",
         "  \n",
-        "#display table\n",
         "print(tabulate(results, headers=col_names, tablefmt=\"fancy_grid\"))"
       ]
     },
@@ -3201,7 +3108,8 @@
         "    in all variations of embeddings and different configuration.\n",
         "\n",
         "    This makes sense since LSTM maintains a distant past much better\n",
-        "    compared to RNN, as result performing much better.\n",
+        "    whereas RNN only looks at the previous word prediction along with\n",
+        "    the current new information.\n",
         "\n",
         "    LSTM with GloVe, GloVe-Twitter, and FastText all seem to have\n",
         "    performed similar with around 79% accuracy.\n",
