--- a/15. clustering.ipynb
+++ b/15. clustering.ipynb
@@ -54,11 +54,11 @@
    "source": [
     "from sklearn.cluster import KMeans\n",
     "kmeans = KMeans (\n",
-    "    n_clusters=2, # Specify the number of clusters\n",
-    "    init='random', # Randomly pick the centroids\n",
-    "    n_init=10, # Run the algorithm for 10 times independently with random centroids, and pick the one with least SSE\n",
-    "    max_iter=200, # 200 iterations for each run\n",
-    "    tol=1e-04, # Tolerance for SSE\n",
+    "    n_clusters=2, # Specify the number of clusters.\n",
+    "    init='random', # Randomly pick the centroids.\n",
+    "    n_init=10, # Run the algorithm for 10 times independently with random centroids, and pick the one with least SSE.\n",
+    "    max_iter=200, # 200 iterations for each run.\n",
+    "    tol=1e-04, # Tolerance for SSE.\n",
     "    random_state=42\n",
     ")\n",
     "\n",
