--- a/15. clustering.ipynb
+++ b/15. clustering.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "kmeans_plus = KMeans(\n",
     "    n_clusters=2,  # Specify the number of clusters.\n",
-    "    init='k-means++',  # Randomly pick the centroids.\n",
+    "    init='k-means++',  # Cleverly pick the centroids. These centroids are disimilar and faraway from eachother\n",
     "    # Run the algorithm for 10 times independently with random centroids, and pick the one with least SSE.\n",
     "    n_init=10,\n",
     "    max_iter=200,  # 200 iterations for each run.\n",
