--- a/15. kmeans-clustering.ipynb
+++ b/15. kmeans-clustering.ipynb
@@ -221,6 +221,20 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ELBOW METHOD (to determine the quality of clusters and number of clusters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
