--- a/15. kmeans-clustering.ipynb
+++ b/15. kmeans-clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "       1, 0, 1, 1])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,44 @@
    "metadata": {},
    "source": [
     "ELBOW METHOD (to determine the quality of clusters and number of clusters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'KMeans' object has no attribute 'inertia_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\University Files\\Assignments\\7th Semester\\Machine Learning\\ML Code\\15. kmeans-clustering.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m11\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     km \u001b[39m=\u001b[39m KMeans(\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         n_clusters\u001b[39m=\u001b[39mi,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         init\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mk-means++\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     )\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     distortions\u001b[39m.\u001b[39mappend(km\u001b[39m.\u001b[39;49minertia_)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(\u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m11\u001b[39m), distortions, marker\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mo\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/15.%20kmeans-clustering.ipynb#X10sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m plt\u001b[39m.\u001b[39mxlabel(\u001b[39m'\u001b[39m\u001b[39mNumber of Clusters\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'KMeans' object has no attribute 'inertia_'"
+     ]
+    }
+   ],
+   "source": [
+    "distortions = []\n",
+    "for i in range(1, 11):\n",
+    "    km = KMeans(\n",
+    "        n_clusters=i,\n",
+    "        init='k-means++',\n",
+    "        n_init=10,\n",
+    "        max_iter=300,\n",
+    "        tol=1e-04,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "\n",
+    "    distortions.append(km.inertia_)\n",
+    "\n",
+    "plt.plot(range(1, 11), distortions, marker='o')\n",
+    "plt.xlabel('Number of Clusters')\n",
+    "plt.ylabel('Inertia')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
