--- a/CIFAR-10 Image Classification with CNN, Augmentation and Fine-tuning Pre-trained Networks/cifar10_multiclass_classification.ipynb
+++ b/CIFAR-10 Image Classification with CNN, Augmentation and Fine-tuning Pre-trained Networks/cifar10_multiclass_classification.ipynb
@@ -2559,11 +2559,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.5 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "7c2737f5cd3eb6a237b7123ce75c641d6f975db18b0c0702ad2055474d78171c"
+      }
     }
   },
   "nbformat": 4,
